--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "microsoft-cognitiveservices-speech-sdk": "^1.36.0",
+    "mongoose": "^8.4.0",
     "twilio": "~3.64.0"
   },
   "devDependencies": {
